# AGN

./: .gitignore  Cargo.toml  README.ja.md  README.md  build_error.txt  build_error_2.txt  build_error_3.txt  build_wasm.sh  demo_phase11.agn  demo_phase12.agn  demo_phase8.agn  test.agn  test_ai.agn  test_broken.agn  test_multilingual.agn  test_real.agn  test_speed.agn  test_ui.agn  vercel.json
examples/: clicker.agn  demo_phase10.agn  kizato_demo.agn  kizuna_demo.agn  simple_demo.agn  story_demo.agn  umeda_underground.agn
output/: Cargo.toml  index.html  test_multilingual  test_multilingual.ll  test_speed  test_speed.ll
output/src/: lib.rs
src/: ai_analyzer.rs  ai_runtime.rs  codegen.rs  compiler.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  memory.rs  native_window.rs  normalizer.rs  p2p.rs  parser.rs  symbol_table.rs  type_inferencer.rs  utils.rs  web_generator.rs
src/bridge/: mock.rs  mod.rs  p2p.rs  std_bridge.rs  ui.rs
src/graphics/: animation.rs  layout.rs  mod.rs  renderer.rs  shader.wgsl  state.rs
web/: package-lock.json  package.json
web/app/: page.tsx
web/app/api/gemini/: route.ts
